src/test/deca/syntax/invalid/lexer/include_file_not_found.deca
// Description :
//    Testing include with a non existent file
//
// Result:
//    Physics.decah: include file not found 
//    line 8

#include "Physics.decah"
